deployments/ingress-deployment.yaml
###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-8
  labels:
    name: gateway-ingress-8
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /consolidacion
        backend:
          service:
            name: servicio-consolidacion
            port: 
              number: 80
      - pathType: Prefix
        path: /auditoria
        backend:
          service:
            name: servicio-auditoria
            port: 
              number: 80
      - pathType: Prefix
        path: /compania
        backend:
          service:
            name: servicio-compania
            port: 
              number: 80
